[project]
name = "apps-7guis-circle-drawer"
version = "1.0.0"
description = "7GUIs circle drawer app with tap-created circles, radius editing, and undo-redo history."
requires-python = ">=3.10"
keywords = ["apps", "7guis", "circle drawer", "canvas", "undo", "redo"]
authors = [{ name = "Flet team", email = "hello@flet.dev" }]
dependencies = ["flet"]

[dependency-groups]
dev = ["flet-cli", "flet-desktop", "flet-web"]

[tool.flet.gallery]
categories = ["Apps/7GUIs", "Apps/Canvas"]

[tool.flet.metadata]
title = "Circle drawer"
controls = ["SafeArea", "Container", "Column", "Row", "Text", "Stack", "GestureDetector", "AlertDialog", "Slider", "TextButton", "FilledButton", "OutlinedButton"]
layout_pattern = "canvas-tools"
complexity = "intermediate"
features = ["tap handling", "dialog editing", "undo", "redo"]

[tool.flet]
org = "dev.flet"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"
