[project]
name = "apps-7guis-temperature-converter"
version = "1.0.0"
description = "7GUIs temperature converter with synchronized Celsius and Fahrenheit fields."
requires-python = ">=3.10"
keywords = ["apps", "7guis", "temperature converter", "forms", "validation"]
authors = [{ name = "Flet team", email = "hello@flet.dev" }]
dependencies = ["flet"]

[dependency-groups]
dev = ["flet-cli", "flet-desktop", "flet-web"]

[tool.flet.gallery]
categories = ["Apps/7GUIs", "Apps/Forms"]

[tool.flet.metadata]
title = "Temperature converter"
controls = ["SafeArea", "Container", "Column", "Row", "Text", "TextField"]
layout_pattern = "inline-form"
complexity = "basic"
features = ["live conversion", "input filtering", "form validation"]

[tool.flet]
org = "dev.flet"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"
